--- a/templates/veggie/list.html
+++ b/templates/veggie/list.html
@@ -12,7 +12,7 @@ Vegetables
         {%if role == "staff"%}
         <div class="d-flex">
             <div class="me-2">
-                <!-- Search Form -->
+                <!-- Filter Form -->
                 <form method="get" action="#" class="d-flex align-items-start">                    
                     <div class="input-group">
                         <select id="available" name="available" class="form-select">
