--- a/templates/customer/order/confirm.html
+++ b/templates/customer/order/confirm.html
@@ -7,67 +7,75 @@ Order Summary
 {% block content %}
 {% if order.customer_id == user_id %}
 <div class="container p-2">
-    <h3>Order Summary</h3>
-    <div class="table-responsive ms-4 me-4 mb-4">
-        <table class="table table-hover table-sm">
-            <thead>
-                <tr>
-                    <th>Item Name</th>
-                    <th>Quantity</th>
-                    <th>Price</th>
-                    <th>Subtotal</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for orderline in order.orderlines %}
-                    <tr>
-                        <td>
-                            {{ orderline.item.name if orderline.item.name else orderline.item.box_name() }}
-                        </td>
-                        <td>                            
-                            {{ orderline.item.quantity_display() }}
-                        </td>
-                        <td>{{ orderline.item.price_display() }}</td>
-                        <td>{{ orderline.item.subtotal_display() }}</td>
-                    </tr>
-                {% endfor %}
-                    <tr>
-                        <th scope="row" colspan="3" class="border-0 text-end">
-                            Discount:
-                        </th>
-                        <td class="text-end me-2">
-                            {{ "%.2f" | format(discount) }}
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row" colspan="3" class="border-0 text-end">
-                            Total: 
-                        </th>
-                        <td class="text-end me-2">
-                            {{ "$%.2f" | format(total) }}
-                        </td>
-                    </tr>
-            </tbody>
-        </table>
-        <div>
-            <form action="{{ url_for('order.confirm_order', order_id=order.id) }}" method="POST">
-                <div class="row mt-2">
-                    <div class="form-check ms-4">
-                        <input class="form-check-input" type="checkbox" value="delivery" id="delivery" name="delivery">
-                        <label class="form-check-label" for="delivery">
-                            Delivery (Subject to $10.00 delivery fee)
-                        </label>                    
+    <div class="row">
+        <div class="col-lg-10 mx-auto">
+            <div class="card border-0">
+                <div class="card-header bg-primary text-white">
+                    <h3 class="mb-0">Order Summary</h3>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive ms-4 me-4 mb-4">
+                        <table class="table table-hover table-sm">
+                            <thead>
+                                <tr>
+                                    <th class="col text-start">Item Name</th>
+                                    <th class="col text-center">Quantity</th>
+                                    <th>Price</th>
+                                    <th class="col text-end">Subtotal</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for orderline in order.orderlines %}
+                                <tr>
+                                    <td class="col text-start">
+                                        {{ orderline.item.name if orderline.item.name else orderline.item.box_name() }}
+                                    </td>
+                                    <td class="col text-center">                            
+                                        {{ orderline.item.quantity_display() }}
+                                    </td>
+                                    <td>{{ orderline.item.price_display() }}</td>
+                                    <td class="col text-end">{{ orderline.item.subtotal_display() }}</td>
+                                </tr>
+                                {% endfor %}
+                                    <tr>
+                                        <th scope="row" colspan="3" class="border-0 text-end">
+                                            Discount:
+                                        </th>
+                                        <td class="text-end me-2">
+                                            {{ "%.2f" | format(discount) }}
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row" colspan="3" class="border-0 text-end">
+                                            Total: 
+                                        </th>
+                                        <td class="text-end me-2">
+                                            {{ "$%.2f" | format(total) }}
+                                        </td>
+                                    </tr>
+                            </tbody>
+                        </table>
+                        <div class="mt-2 p-2">
+                            <form action="{{ url_for('order.confirm_order', order_id=order.id) }}" method="POST">
+                                <div class="row mt-2">
+                                    <div class="form-check ms-2">
+                                        <input class="form-check-input" type="checkbox" value="delivery" id="delivery" name="delivery">
+                                        <label class="form-check-label" for="delivery">
+                                            Delivery (Subject to $10.00 delivery fee)
+                                        </label>                    
+                                    </div>
+                                    <div>
+                                        <small class="text-body-secondary ms-2">Delivery only available within 20km radius.</small>
+                                    </div>
+                                </div>   
+                                <button type="submit" class="btn btn-success mt-2 w-100">Confirm Order</button>
+                            </form>
+                        </div>
                     </div>
-                    <div>
-                        <small class="text-body-secondary">Delivery only available within 20km radius.</small>
-                    </div>
-                </div>   
-                <button type="submit" class="btn btn-primary mt-2">Confirm Order</button>
-            </form>
+                </div>
+            </div>
         </div>
     </div>
-    
-    {#<a href="{{ url_for('order.edit_order') }}">Edit Order</a> #}
 </div>
 {% endif %}
 {% endblock %}
