--- a/templates/customer/order/list.html
+++ b/templates/customer/order/list.html
@@ -11,23 +11,35 @@ Orders
             <h3>My Orders</h3>
         {% elif role == 'staff' %}
             <h3>Order List</h3>
-        {% endif %}
-        <div class="d-flex">
-            <div class="me-2">
-                <!-- Search Form -->
-                <!-- <form action=""method="get">
-                    <div class="input-group mb-3">
-                        <input class="form-control" name="search_query" placeholder="Email" type="text"
-                               value="">
-                        <div class="input-group-prepend">
-                            <button class="btn btn-warning" type="submit">
-                                <i class="bi bi-search"></i> Search
-                            </button>
-                        </div>
-                    </div>
-                </form> -->
+            <div class="d-flex">
+                <div class="me-2">
+                    <!-- Filter Form -->
+                    <form method="get" action="#" class="d-flex align-items-start">                    
+                        <div class="input-group">
+                            <select id="status" name="status" class="form-select">
+                                <option value="" selected disabled> Filter </option>
+                                {% for status in status_list %}
+                                    <option value="{{ status }}" {% if status == request.args.get('status') %} selected {% endif %}>
+                                        {{ status }}
+                                </option>
+                                {% endfor %}
+                            </select>
+                            <div class="input-group-prepend">
+                                <button type="submit" class="btn btn-primary">
+                                    Filter 
+                                </button>
+                            </div>
+                        </div>                
+                    </form>
+                </div>
+                <!-- link to show all -->
+                <div class="me-2">
+                    <a href="{{url_for('staff.list_orders')}}" class="btn btn-primary">
+                        View All
+                    </a>
+                </div>
             </div>
-        </div>
+        {% endif %}        
     </div>
     <div class="table-responsive me-4">
         <table class="table table-hover">
