--- a/templates/customer/order/new.html
+++ b/templates/customer/order/new.html
@@ -6,135 +6,137 @@ Create Order
 
 {% block content %}
 <div class="container p-2">
-    <div class="justify-content-center">
-        <h3>New Order</h3>
-    </div> 
-    <div class="container-fluid">                
-        <form action="{{ url_for('order.create_order') }}" method="POST">
-            <div class="row">
-                <h6>
-                    Select Premade Boxes:
-                </h6>            
-                <div class="table-responsive ms-4 me-4">
-                    <table class="table table-hover table-sm">
-                        <thead>
-                            <tr>
-                                <th class="col" style="width:5%;">No.</th>
-                                <th class="col">Size</th>                                                                                                
-                                <th class="text-end" style="width:15%;">Unit Price</th>
-                                <th class="text-center" style="width:15%;">Qty</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for box in boxes %}
-                            <tr>
-                                <td class="text-center">{{ loop.index }}</td>
-                                <td class="text-start">{{ box.size | title }}</td>                                    
-                                <td class="text-end">{{ box.price }}</td>
-                                <td class="text-center">
-                                    <input type="number" class="" id="{{ box.id }}" name="box_{{ box.id }}" min="1" step="1" max="999" placeholder="box" style="width: 100px;">
-                                </td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>         
-                </div>
-            </div>
-            <div class="row">
-                <h6>
-                    Select Vegetables by Weight:
-                </h6>            
-                <div class="table-responsive ms-4 me-4">
-                    <table class="table table-hover table-sm">
-                        <thead>
-                            <tr>
-                                <th class="col" style="width:5%;">No.</th>
-                                <th class="col">Product</th>                                                                                                
-                                <th class="text-end" style="width:15%;">Unit Price</th>
-                                <th class="text-center" style="width:15%;">Qty</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for w_vg in weight_veggies %}
-                            <tr>
-                                <td class="text-center">{{ loop.index }}</td>
-                                <td class="text-start">{{ w_vg.name | title }}</td>                                    
-                                <td class="text-end">{{ w_vg.price }}</td>
-                                <td class="text-center">
-                                    <input type="number" class="" id="{{ w_vg.id }}" name="weight_{{ w_vg.id }}" min="0.1" step="0.1" max="999.99" placeholder="kg.." style="width: 100px;">
-                                </td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>         
-                </div>
-            </div>
-            <div class="row">
-                <h6>
-                    Select Vegetables by Unit:
-                </h6>            
-                <div class="table-responsive ms-4 me-4">
-                    <table class="table table-hover table-sm">
-                        <thead>
-                            <tr>
-                                <th class="col" style="width:5%;">No.</th>
-                                <th class="col">Product</th>                                                                                                
-                                <th class="text-end" style="width:15%;">Unit Price</th>
-                                <th class="text-center" style="width:15%;">Qty</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for u_vg in unit_veggies %}
-                            <tr>
-                                <td class="text-center">{{ loop.index }}</td>
-                                <td class="text-start">{{ u_vg.name | title }}</td>                                    
-                                <td class="text-end">{{ u_vg.price }}</td>
-                                <td class="text-center">
-                                    <input type="number" class="" id="{{ u_vg.id }}" name="unit_{{ u_vg.id }}" min="1" step="1" max="999" placeholder="each" style="width: 100px;">
-                                </td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>         
-                </div>
-            </div>
-            <div class="row">
-                <h6>
-                    Select Vegetables by Pack:
-                </h6>            
-                <div class="table-responsive ms-4 me-4">
-                    <table class="table table-hover table-sm">
-                        <thead>
-                            <tr>
-                                <th class="col" style="width:5%;">No.</th>
-                                <th class="col">Product</th>                                                                                                
-                                <th class="text-end" style="width:15%;">Unit Price</th>
-                                <th class="text-center" style="width:15%;">Qty</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for p_vg in pack_veggies %}
-                            <tr>
-                                <td class="text-center">{{ loop.index }}</td>
-                                <td class="text-start">{{ p_vg.name | title }}</td>                                    
-                                <td class="text-end">{{ p_vg.price }}</td>
-                                <td class="text-center">
-                                    <input type="number" class="" id="{{ p_vg.id }}" name="pack_{{ p_vg.id }}" min="1" step="1" max="999" placeholder="pack" style="width: 100px;">
-                                </td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>         
-                </div>
+    <div class="row">
+        <div class="col-lg-8 mx-auto p-2">
+            <!-- Title -->
+            <div class="d-flex justify-content-between mt-2 mb-3 me-4">
+                <h3>New Order</h3>
             </div> 
-            <div class="justify-content-center">          
-                <button type="submit" class="btn btn-primary w-100">
-                    Add to Order
-                </button>
+            <div class="">                
+                <form action="{{ url_for('order.create_order') }}" method="POST">
+                    <div class="row">
+                        <h6>Select Premade Boxes:</h6>            
+                        <div class="table-responsive ms-4 me-4">
+                            <table class="table table-hover table-sm">
+                                <thead>
+                                    <tr>
+                                        <th class="col" style="width:5%;">No.</th>
+                                        <th class="col">Size</th>                                                                                                
+                                        <th class="text-end" style="width:15%;">Unit Price</th>
+                                        <th class="text-center" style="width:15%;">Qty</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for box in boxes %}
+                                    <tr>
+                                        <td class="text-center">{{ loop.index }}</td>
+                                        <td class="text-start">{{ box.size | title }}</td>                                    
+                                        <td class="text-end">{{ box.price }}</td>
+                                        <td class="text-center">
+                                            <input type="number" class="" id="{{ box.id }}" name="box_{{ box.id }}" min="1" step="1" max="999" placeholder="box" style="width: 100px;">
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>         
+                        </div>
+                    </div>
+                    <div class="row">
+                        <h6>
+                            Select Vegetables by Weight:
+                        </h6>            
+                        <div class="table-responsive ms-4 me-4">
+                            <table class="table table-hover table-sm">
+                                <thead>
+                                    <tr>
+                                        <th class="col" style="width:5%;">No.</th>
+                                        <th class="col">Product</th>                                                                                                
+                                        <th class="text-end" style="width:15%;">Unit Price</th>
+                                        <th class="text-center" style="width:15%;">Qty</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for w_vg in weight_veggies %}
+                                    <tr>
+                                        <td class="text-center">{{ loop.index }}</td>
+                                        <td class="text-start">{{ w_vg.name | title }}</td>                                    
+                                        <td class="text-end">{{ w_vg.price }}</td>
+                                        <td class="text-center">
+                                            <input type="number" class="" id="{{ w_vg.id }}" name="weight_{{ w_vg.id }}" min="0.1" step="0.1" max="999.99" placeholder="kg.." style="width: 100px;">
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>         
+                        </div>
+                    </div>
+                    <div class="row">
+                        <h6>
+                            Select Vegetables by Unit:
+                        </h6>            
+                        <div class="table-responsive ms-4 me-4">
+                            <table class="table table-hover table-sm">
+                                <thead>
+                                    <tr>
+                                        <th class="col" style="width:5%;">No.</th>
+                                        <th class="col">Product</th>                                                                                                
+                                        <th class="text-end" style="width:15%;">Unit Price</th>
+                                        <th class="text-center" style="width:15%;">Qty</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for u_vg in unit_veggies %}
+                                    <tr>
+                                        <td class="text-center">{{ loop.index }}</td>
+                                        <td class="text-start">{{ u_vg.name | title }}</td>                                    
+                                        <td class="text-end">{{ u_vg.price }}</td>
+                                        <td class="text-center">
+                                            <input type="number" class="" id="{{ u_vg.id }}" name="unit_{{ u_vg.id }}" min="1" step="1" max="999" placeholder="each" style="width: 100px;">
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>         
+                        </div>
+                    </div>
+                    <div class="row">
+                        <h6>
+                            Select Vegetables by Pack:
+                        </h6>            
+                        <div class="table-responsive ms-4 me-4">
+                            <table class="table table-hover table-sm">
+                                <thead>
+                                    <tr>
+                                        <th class="col" style="width:5%;">No.</th>
+                                        <th class="col">Product</th>                                                                                                
+                                        <th class="text-end" style="width:15%;">Unit Price</th>
+                                        <th class="text-center" style="width:15%;">Qty</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for p_vg in pack_veggies %}
+                                    <tr>
+                                        <td class="text-center">{{ loop.index }}</td>
+                                        <td class="text-start">{{ p_vg.name | title }}</td>                                    
+                                        <td class="text-end">{{ p_vg.price }}</td>
+                                        <td class="text-center">
+                                            <input type="number" class="" id="{{ p_vg.id }}" name="pack_{{ p_vg.id }}" min="1" step="1" max="999" placeholder="pack" style="width: 100px;">
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>         
+                        </div>
+                    </div>
+                    <div class="row text-center">          
+                        <button type="submit" class="btn btn-primary w-100 ms-4">
+                            Add to Order
+                        </button>
+                    </div>
+                </form>
             </div>
-        </form>
-    </div>
-    
+        </div>
+    </div>        
 </div>
 
 {% endblock %}
