--- a/templates/customer/order/view.html
+++ b/templates/customer/order/view.html
@@ -8,9 +8,25 @@ Order Details
 <div class="container p-2">
     <div class="row">
         <div class="col-sm-12 mx-auto">
+            {% if role in ('customer', 'corporate_customer') %}                        
+            <div class="d-flex justify-content-start ms-6 mb-4">
+                <a href="{{url_for('order.list_orders')}}" class="link-back link-secondary">
+                    <i class="bi bi-arrow-left"></i> Back to Order List
+                </a>
+            </div>
+            {% endif %}
+            {% if role == 'staff' %}
+            <div class="d-flex justify-content-start ms-6 mb-4">
+                <a href="{{url_for('staff.list_orders')}}" class="link-back link-secondary">
+                    <i class="bi bi-arrow-left"></i> Back to Order List
+                </a>
+            </div>
+            {% endif %}
             <!-- Order details -->
             <div class="card">
-                <h5 class="card-header">Order Details</h5>
+                <h5 class="card-header bg-primary text-white">
+                    Order Details
+                </h5>
 
                 <div class="card-body d-flex">
                     <dl class="row ms-2 me-2 col-sm-12">
@@ -29,6 +45,9 @@ Order Details
 
                         <dt class="col-sm-2">Status</dt>
                         <dd class="col-sm-4">{{ order.status }}</dd>
+
+                        <dt class="col-sm-2">Payment</dt>
+                        <dd class="col-sm-4">{{ order.payment_type() }}</dd>
                                                                 
                         <div>
                             <hr>
@@ -40,8 +59,8 @@ Order Details
                         <thead>
                             <tr>
                                 <th class="text-center" style="width:5%;">No.</th>
-                                <th style="width:45%;">Product</th>                                                                        
-                                <th class="text-end" style="width:5%;">Qty</th>
+                                <th>Product</th>                                                                        
+                                <th class="text-end" style="width:15%;">Qty</th>
                                 <th class="text-end" style="width:15%;">Unit Price</th>
                                 <th class="text-end me-2" style="width:15%;">Total Price</th>
                             </tr>
@@ -62,7 +81,7 @@ Order Details
                                     Discount:
                                 </th>
                                 <td class="border-0 text-end">
-                                    {{ "%.2f"|format(discount) }}
+                                    {{ "- %.2f"|format(discount) }}
                                 </td>
                             </tr>
                             {% endif %}
@@ -91,20 +110,7 @@ Order Details
                     </table>
                 </div>
             </div>
-            {% if role in ('customer', 'corporate_customer') %}                        
-            <div class="d-flex justify-content-start mt-2 mb-3">
-                <a href="{{url_for('order.list_orders')}}" class="link-back">
-                    <i class="bi bi-arrow-left"></i> Back to Order List
-                </a>
-            </div>
-            {% endif %}
-            {% if role == 'staff' %}
-            <div class="d-flex justify-content-start mt-2 mb-3">
-                <a href="{{url_for('staff.list_orders')}}" class="link-back">
-                    <i class="bi bi-arrow-left"></i> Back to Order List
-                </a>
-            </div>
-            {% endif %}
+            
         </div>
     </div>
 </div>
