--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,7 +5,7 @@ Dashboard
 {% endblock %}
 
 {% block content %}
-<div class="container mt-5 p-2">
+<div class="container p-2">
     <!-- Display if user is logged in -->
     {% if username %}
     <div class="container text-center">
