--- a/templates/auth.html
+++ b/templates/auth.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}
+<!-- Login template -->
+{% extends "base.html" %}
 
 {% block title %}
 Login
@@ -20,7 +21,9 @@ Login
                             <label for="password">Password</label>
                             <input type="password" class="form-control" id="password" name="password" required>
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Login</button>
+                        <button type="submit" class="btn btn-primary w-100">
+                            Login
+                        </button>
                     </form>
                 </div>
             </div>
