--- a/templates/customer/order/cancel.html
+++ b/templates/customer/order/cancel.html
@@ -1,3 +1,4 @@
+<!-- This page is a modal that contains the form for customer to cancel an order -->
 <!-- Button trigger modal to update order status-->
 <button type="button" class="btn btn-danger btn-sm me-2" data-bs-toggle="modal" data-bs-target="#cancel{{order.id}}">
     Cancel
