--- a/templates/customer/order/new.html
+++ b/templates/customer/order/new.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}
+<!-- This template display the Order form -->
+{% extends "base.html" %}
 
 {% block title %}
 Create Order
@@ -12,8 +13,10 @@ Create Order
             <div class="d-flex justify-content-between mt-2 mb-3 me-4">
                 <h3>New Order</h3>
             </div> 
+            <!-- Form for creating a new order -->
             <div class="">                
                 <form action="{{ url_for('order.create_order') }}" method="POST">
+                    <!-- Premade boxes -->
                     <div class="row">
                         <h6>Select Premade Boxes:</h6>            
                         <div class="table-responsive ms-4 me-4">
@@ -32,6 +35,7 @@ Create Order
                                         <td class="text-center">{{ loop.index }}</td>
                                         <td class="text-start">{{ box.size | title }}</td>                                    
                                         <td class="text-end">{{ box.price }}</td>
+                                        <!-- input field: quantity to order -->
                                         <td class="text-center">
                                             <input type="number" class="" id="{{ box.id }}" name="box_{{ box.id }}" min="1" step="1" max="999" placeholder="box" style="width: 100px;">
                                         </td>
@@ -41,6 +45,7 @@ Create Order
                             </table>         
                         </div>
                     </div>
+                    <!-- Vegetables by weight -->
                     <div class="row">
                         <h6>
                             Select Vegetables by Weight:
@@ -61,6 +66,7 @@ Create Order
                                         <td class="text-center">{{ loop.index }}</td>
                                         <td class="text-start">{{ w_vg.name | title }}</td>                                    
                                         <td class="text-end">{{ w_vg.price }}</td>
+                                        <!-- Input field: weight to order -->
                                         <td class="text-center">
                                             <input type="number" class="" id="{{ w_vg.id }}" name="weight_{{ w_vg.id }}" min="0.1" step="0.1" max="999.99" placeholder="kg.." style="width: 100px;">
                                         </td>
@@ -70,6 +76,7 @@ Create Order
                             </table>         
                         </div>
                     </div>
+                    <!-- Vegetables by unit -->
                     <div class="row">
                         <h6>
                             Select Vegetables by Unit:
@@ -90,6 +97,7 @@ Create Order
                                         <td class="text-center">{{ loop.index }}</td>
                                         <td class="text-start">{{ u_vg.name | title }}</td>                                    
                                         <td class="text-end">{{ u_vg.price }}</td>
+                                        <!-- Input field: quantity to order -->
                                         <td class="text-center">
                                             <input type="number" class="" id="{{ u_vg.id }}" name="unit_{{ u_vg.id }}" min="1" step="1" max="999" placeholder="each" style="width: 100px;">
                                         </td>
@@ -99,6 +107,7 @@ Create Order
                             </table>         
                         </div>
                     </div>
+                    <!-- Vegetables by pack -->
                     <div class="row">
                         <h6>
                             Select Vegetables by Pack:
@@ -119,6 +128,7 @@ Create Order
                                         <td class="text-center">{{ loop.index }}</td>
                                         <td class="text-start">{{ p_vg.name | title }}</td>                                    
                                         <td class="text-end">{{ p_vg.price }}</td>
+                                        <!-- Input field: number of pack to order -->
                                         <td class="text-center">
                                             <input type="number" class="" id="{{ p_vg.id }}" name="pack_{{ p_vg.id }}" min="1" step="1" max="999" placeholder="pack" style="width: 100px;">
                                         </td>
@@ -128,6 +138,7 @@ Create Order
                             </table>         
                         </div>
                     </div>
+                    <!-- Submit button to submit order-->
                     <div class="row text-center">          
                         <button type="submit" class="btn btn-primary w-100 ms-4">
                             Add to Order
