--- a/templates/staff/customer/list.html
+++ b/templates/staff/customer/list.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}
+<!-- Template to display list of customers -->
+{% extends "base.html" %}
 
 {% block title %}
 Customers
@@ -7,6 +8,7 @@ Customers
 {% block content %}
 <div class="container p-2">
     <div class="d-flex justify-content-between mt-2 mb-3 me-4">
+        <!-- Title -->
         <h3>Customer List</h3>
         <div class="d-flex">
             <div class="me-2">
@@ -25,6 +27,7 @@ Customers
             </div>
         </div>
     </div>
+    <!-- Table for displaying customer list -->
     <div class="table-responsive me-4">
         <table class="table table-hover">
             <thead class="table-primary">
@@ -45,13 +48,14 @@ Customers
                     <td>{{ customer.family_name }}</td>
                     <td>{{ customer.email }}</td>
                     <td>
-                        {% if customer.type== 'customer' %}
+                        {% if customer.type== "customer" %}
                         Private
-                        {% elif customer.type == 'corporate_customer' %}
+                        {% elif customer.type == "corporate_customer" %}
                         Corporate
                         {% endif %}
-                    </td>
+                    </td>                    
                     <td>
+                        <!-- Button to view customer details -->
                         <a class="btn btn-primary btn-sm me-2"
                         href="{{ url_for('staff.view_customer', customer_id=customer.id) }}">
                             <i class="bi bi-eye"></i> View
