--- a/templates/staff/profile.html
+++ b/templates/staff/profile.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}
+<!-- Template to display staff profile -->
+{% extends "base.html" %}
 
 {% block title %}
 Profile
@@ -8,7 +9,7 @@ Profile
 <div class="container p-2">
     <div class="row mt-4">
         <div class="col-lg-8 mx-auto">
-    <!-- Display if user is logged in -->
+            <!-- Display if user is logged in -->
             {% if username == user.username and role == "staff" %}
             <div class="card border-0">
                 <div class="card-header bg-primary text-white">
